--- a/app/src/main/res/layout/activity_mis_palabras.xml
+++ b/app/src/main/res/layout/activity_mis_palabras.xml
@@ -6,9 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MisPalabras">
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="86dp"
-        tools:layout_editor_absoluteY="55dp" />
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="VerPalabras"
+        android:text="Ver mis palabras"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
