--- a/app/src/main/res/layout/activity_agregar_palabra.xml
+++ b/app/src/main/res/layout/activity_agregar_palabra.xml
@@ -14,7 +14,8 @@
         android:layout_marginEnd="54dp"
         android:layout_marginRight="54dp"
         android:text="NUEVA PALABRA"
-        android:textColor="#03A9F4"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textColor="#B16C14"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.864"
@@ -48,6 +49,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#C78D0A"
         android:onClick="GuardarPalabra"
         android:text="Agregar a mi lista"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -67,24 +69,33 @@
         app:layout_constraintTop_toBottomOf="@+id/textBox1"
         app:srcCompat="@mipmap/phone3" />
 
-    <Button
+    <ImageButton
         android:id="@+id/prueba"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Grabar"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="573dp" />
+        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
+        android:layout_width="81dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginBottom="120dp"
+        android:adjustViewBounds="false"
+        android:background="#BC1D1502"
+        android:cropToPadding="false"
+        android:scaleType="fitCenter"
+        android:src="@android:drawable/presence_audio_online"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="154dp"
-        android:layout_marginLeft="154dp"
+        android:layout_marginLeft="170dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="98dp"
-        android:layout_marginRight="98dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginRight="220dp"
+        android:layout_marginBottom="50dp"
+        android:background="#B6870D"
         android:text="Boton de prueba 2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +105,12 @@
     <LinearLayout
         android:layout_width="262dp"
         android:layout_height="400dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="16dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="331dp"></LinearLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/button"></LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
