--- a/app/src/main/res/layout/activity_agregar_palabra.xml
+++ b/app/src/main/res/layout/activity_agregar_palabra.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginBottom="48dp"
         android:background="#C78D0A"
-        android:onClick="MostrarPatron"
+        android:onClick="GuardarPalabra"
         android:text="Agregar a mi lista"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
