Vibraciones personalizadas listas y pantalla AgregarPalabra

--- a/app/src/main/res/layout/activity_agregar_palabra.xml
+++ b/app/src/main/res/layout/activity_agregar_palabra.xml
@@ -10,29 +10,26 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="48dp"
         android:background="#C78D0A"
         android:onClick="GuardarPalabra"
         android:text="Agregar a mi lista"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.246"
-        app:layout_constraintStart_toEndOf="@+id/prueba"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintVertical_bias="0.151" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="29dp"
         android:background="#B6870D"
-        android:text="Boton de prueba 2"
+        android:text="Detener grabacion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/prueba" />
 
     <EditText
         android:id="@+id/textBox1"
@@ -51,36 +48,30 @@
         style="@android:style/Widget.DeviceDefault.Light.ImageButton"
         android:layout_width="81dp"
         android:layout_height="50dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginBottom="128dp"
+        android:layout_marginTop="68dp"
         android:adjustViewBounds="false"
         android:background="#BC1D1502"
         android:cropToPadding="false"
         android:scaleType="fitCenter"
         android:src="@android:drawable/presence_audio_online"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintHorizontal_bias="0.039"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="272dp"
-        android:layout_height="210dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:layout_width="206dp"
+        android:layout_height="144dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textBox1"
-        app:layout_constraintVertical_bias="0.16"
         app:srcCompat="@mipmap/phone3" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="54dp"
         android:layout_marginRight="54dp"
         android:text="NUEVA PALABRA"
@@ -88,7 +79,7 @@
         android:textColor="#B16C14"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.864"
+        app:layout_constraintHorizontal_bias="0.885"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -113,12 +104,13 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
-        android:text="Crear una grabación"
+        android:layout_marginBottom="28dp"
+        android:text="Grabar nueva vibración"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/prueba"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.568"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
