--- a/app/src/main/res/layout/activity_mis_palabras.xml
+++ b/app/src/main/res/layout/activity_mis_palabras.xml
@@ -9,14 +9,39 @@
     <Button
         android:id="@+id/button4"
         style="@android:style/Widget.Holo.Light.Button"
-        android:layout_width="297dp"
-        android:layout_height="88dp"
+        android:layout_width="156dp"
+        android:layout_height="11dp"
+        android:layout_marginTop="16dp"
         android:background="#C56B65"
         android:onClick="MostrarPalabras"
         android:text="Ver mis palabras"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/lv1"
+        android:layout_width="362dp"
+        android:layout_height="557dp"
+        android:layout_marginTop="19dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:text="MIS PALABRAS"
+        android:textColor="#015F56"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
