--- a/app/src/main/res/layout/activity_agregar_palabra.xml
+++ b/app/src/main/res/layout/activity_agregar_palabra.xml
@@ -8,15 +8,14 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="177dp"
+        android:layout_height="58dp"
         android:layout_marginTop="43dp"
-        android:background="#C78D0A"
+        android:background="@drawable/buttonshape"
         android:onClick="GuardarPalabra"
         android:text="Agregar a mi lista"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lv1"
         app:layout_constraintVertical_bias="0.0" />
@@ -46,7 +45,6 @@
         android:id="@+id/lv1"
         android:layout_width="329dp"
         android:layout_height="211dp"
-        android:layout_marginTop="15dp"
         android:cacheColorHint="#B4B4B4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +89,7 @@
         android:layout_marginRight="54dp"
         android:text="NUEVA PALABRA"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textColor="#B16C14"
+        android:textColor="#46094F"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.885"
